fix visibility of anchor

--- a/assets/css/layouts/_grid.sass
+++ b/assets/css/layouts/_grid.sass
@@ -53,6 +53,6 @@
   overflow-y: scroll
 
 .pan-anchor
-  background-color: #fff
+  background-color: rgba (255,255,255, 0)
   width: 100px
   max-height: 10px
