--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -340,7 +340,7 @@ body {
 }
 
 .pan-anchor {
-  background-color: #fff;
+  background-color: rgba 255, 255, 255, 0;
   width: 100px;
   max-height: 10px;
 }
